[package]
name = "keys-manager"
version = "0.2.0"
authors = ["Maciej Zielinski <maciek.s.zielinski@gmail.com>"]
edition = "2018"

[dependencies]
casper-contract = { version = "1.4.0", default-features = false }
casper-types = { version = "1.4.0", default-features = false }

[[bin]]
name = "keys-manager"
path = "src/main.rs"
bench = false
doctest = false
test = false

[features]
default = ["wee-alloc"]
wee-alloc = ["casper-contract/no-std-helpers"]

[profile.release]
codegen-units = 1
lto = true
