[package]
name = "contract"
version = "0.2.0"
authors = ["Maciej Zielinski <maciek.s.zielinski@gmail.com>"]
edition = "2018"

[dependencies]
casper-contract = "1.2.0"
casper-types = "1.2.0"

[[bin]]
name = "keys-manager"
path = "src/main.rs"
bench = false
doctest = false
test = false

[[bin]]
name = "test-contract"
path = "src/test_contract.rs"
bench = false
doctest = false
test = false

[features]
default = ["casper-contract/std", "casper-types/std", "casper-contract/test-support"]
